# goit-ds-hw-03

./: .gitignore  pyproject.toml
task1/: main.py
task2/: authors.json  main.py
